--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -344,7 +344,7 @@ variable genes within a cell population. Moreover, `BASiCS_TestDE` is used to
 perform differential mean and variability analyses between groups of cells.
 
 
-# Analysis of naive CD4^+^ T cells {#Tcells}
+# Case study: analysis of naive CD4^+^ T cells {#Tcells}
 
 As a case study, we use scRNA-seq data generated for CD4^+^ T cells
 using the C1 Single-Cell Auto Prep System (Fluidigm^®^). 
@@ -462,8 +462,6 @@ sce_naive_active
 
 ## QC and exploratory analysis
 
-### Cell-level QC
-
 The data available at 
 [E-MTAB-4888](https://www.ebi.ac.uk/arrayexpress/experiments/E-MTAB-4888/) have
 been already filtered to remove poor quality samples.
@@ -471,123 +469,77 @@ The QC applied in [@Martinez-jimenez2017] removed cells with: (i) fewer
 than 1,000,000 total reads, (ii) less than 20% of reads mapped to 
 endogenous genes, (iii) less than 1,250 or more than 3,000 detected genes and 
 (iv) more than 10% or fewer than 0.5% of reads mapped to mitochondrial genes.
-Here, we visualise some of these metrics.
-
-```{r PerCellQC, fig.cap="The number of detected genes per cell is plotted against the number of endogeneous counts per cell."}
-# Calculate per cell QC metrics
-sce_naive_active <- addPerCellQC(sce_naive_active, use_altexps = TRUE)
-plotColData(sce_naive_active, x = "sum", y = "detected") +
-  xlab("Number of mapped exonic reads") +
-  ylab("Number of detected genes")
-```
-
-<!--- CV: I am unsure about this additional filter, we can also argure that
-there are 3 cells with unusually large total endogenous reads. My suggestion is 
-to remove and retain the same QC as applied in the original study. ---> 
-
-Another widely used QC diagnostic plot is to compare the total number (or 
-fraction) of spike-in counts versus the total number (or fraction) of 
+As an illustration, we visualise some of these metrics. 
+We also include another widely used QC diagnostic plot which compares the total 
+number (or fraction) of spike-in counts versus the total number (or fraction) of 
 endogeneous counts.
 In such a plot, low quality samples are characterised by a high fraction of 
-spike-in counts and a low fraction of endogeneous counts.
+spike-in counts and a low fraction of endogeneous counts 
+(see Figure \@ref(fig:PerCellQC)).
 
-```{r ERCC, fig.cap="The number of spike-in counts per cells is plotted against the number of endogeneous counts per cell."}
-min_reads <- 600000
-max_reads <- 2300000
-plotColData(sce_naive_active, x = "sum", y = "altexps_spike-ins_sum") +
-  xlab("Total number of reads (excludes non-mapped and intronic reads)") +
-  ylab("Total number of spike-in reads")
+```{r PerCellQC, fig.cap="Cell-level QC metrics. The total number of endogenous read-counts (excludes non-mapped and intronic reads) is plotted against the total number of detected genes (left) and the total number of spike-in read-counts (right)."}
+# Calculate per cell QC metrics
+sce_naive_active <- addPerCellQC(sce_naive_active, use_altexps = TRUE)
+p_cellQC1 <- plotColData(sce_naive_active, x = "sum", y = "detected") +
+  xlab("Total engogenous reads per cell") +
+  ylab("Number of detected genes per cell")
+p_cellQC2 <- plotColData(sce_naive_active, x = "sum", y = "altexps_spike-ins_sum") +
+  xlab("Total engogenous reads per cell") +
+  ylab("Total spike-in reads per cell")
+multiplot(p_cellQC1, p_cellQC2, cols = 2)
 ```
 
-<!-- 
-   +
-  geom_vline(xintercept = min_reads, linetype = "dashed", colour = "grey80") +
-  geom_vline(xintercept = max_reads, linetype = "dashed", colour = "grey80")
-Since we are lacking the information of the total reads per cell (including the 
-non-mapped and intronic reads), we can solely filter cells based on the total 
-number of endogeneous counts (assuming equal numbers of spike-in molecules per 
-well). Nevertheless, we remove two cells that showed unusually low number of 
-reads mapping to endogeneous genes. We indicate the threshold used for filtering
-on the plot using a dashed line.
+These metrics can also be visualised with respect to cell-level metadata, such
+as the experimental conditions (active vs unstimulated) and the different mice 
+from which cells were collected (see Figure \@ref(fig:experimental-condition-batch)). 
 
-```{r, eval = FALSE}
-# Remove five cells that appear to be outliers
-ind_retain <- sce_naive_active$sum > min_reads & sce_naive_active$sum < max_reads
-sce_naive_active <- sce_naive_active[, ind_retain]
-```
- -->
-
-These QC metrics can also be visualised with respect to cell-level metadata.
-For example, the following figures show how these metrics relate to the 
-experimental conditions (active vs unstimulated) and to the different mice 
-from which cells were collected. 
-
-```{r experimental-condition-batch, fig.cap="The number of detected genes per cell is plotted against the number of endogeneous counts per cell. Colour indicates the stimulus status (left) and animal of origin (right) of cells. Cells from two animals were captured either in the naive or activated state."}
+```{r experimental-condition-batch, fig.cap="Cell-level QC metrics according to cell-level metadata. The total number of endogenous reads (excludes non-mapped and intronic reads) is plotted against the total number of detected genes. Colour indicates the experimental condition (left) and animal of origin (right) for each cell."}
 p_stimulus <- plotColData(
     sce_naive_active,
     x = "sum",
     y = "detected", 
     colour_by = "Stimulus") +
-  xlab("Number of mapped exonic reads") +
-  ylab("Number of detected genes") +
+  xlab("Total engogenous reads per cell") +
+  ylab("Number of detected genes per cell") +
   theme(
     legend.position = "bottom",
-    axis.text.x = element_text(angle = 45, hjust = 1)) +
-  ggtitle("Experimental conditions")
+    axis.text.x = element_text(angle = 45, hjust = 1))
 
 p_batch <- plotColData(
     sce_naive_active,
     x = "sum",
     y = "detected", 
     colour_by = "Individuals") +
-  xlab("Number of mapped exonic reads") +
-  ylab("Number of detected genes") +
+  xlab("Total engogenous reads per cell") +
+  ylab("Number of detected genes per cell") +
   theme(
     legend.position = "bottom",
-    axis.text.x = element_text(angle = 45, hjust = 1)) +
-  ggtitle("Source animals (batches)")
+    axis.text.x = element_text(angle = 45, hjust = 1))
 
 multiplot(p_stimulus, p_batch, cols = 2)
 ```
 
-Next, we compute global scaling normalisation factors using
-`r Biocpkg("scran")` [@Lun2016]. These are not necessary to run BASiCS,
-but it is often useful to visualise normalised data in order to identify
-large-scale data. We thus normalise the data using `r Biocpkg("scater")`.
+To further explore the underlying structure of the data, we compute global
+scaling normalisation factors using `r Biocpkg("scran")` and perform a 
+principal component analysis (PCA) of log-transformed normalised expression 
+counts using `r Biocpkg("scater")`. 
+The results of this analysis are visualised with respect to cell-level metadata
+and QC metrics.
+As seen in Figure \@ref(fig:pca-visualisation-stimulus-batch), this analysis 
+suggests the absence of strong batch effects. Moreover, we observe that 
+activated cells tend to exhibit a higher number of expressed genes and total 
+read count (see Figure \@ref(fig:no-genes-total-counts)). 
 
-```{r pre-normalisation}
-# Normalisation
+<!---We detect a higher number of expressed genes and a higher total read count in
+activated cells. Furthermore, cells within each group show a wide distribution
+of these quality measures, without clear outlying cells. ---> 
+
+```{r pca-visualisation-stimulus-batch, fig.cap="First two principal components of log-transformed expression counts after scran normalisation. Colour indicates the experimental condition (left) and animal of origin (right) for each cell."}
+# Global scaling normalisation
 sce_naive_active <- computeSumFactors(sce_naive_active)
 sce_naive_active <- logNormCounts(sce_naive_active)
 # Calculate PCA
 sce_naive_active <- runPCA(sce_naive_active)
-```
-
-The `r Biocpkg("SimpleSingleCell")` Bioconductor workflow and
-the [*OSCA*](https://osca.bioconductor.org/)
-online book each provide an extensive 
-overview on important aspects of how to perform low-level analysis of scRNA-seq 
-data, including quality control [@Lun2016;@Amezquita2019].
-The `calculateQCMetrics` function of the `r Biocpkg("scater")`
-package can be used to 
-calculate a number of cell- and gene-specific quality metrics.
-Furthermore, `r Biocpkg("scater")`
-offers the `runPCA` function to perform principal 
-component analysis (PCA) across all cells.
-
-```{r scater-QC-metrics}
-# Calculate quality metrics
-sce_naive_active <- addPerCellQC(sce_naive_active, use_altexps = TRUE)
-sce_naive_active <- addPerFeatureQC(sce_naive_active)
-
-clean_colnames <- make.names(colnames(colData(sce_naive_active)))
-colnames(colData(sce_naive_active)) <- clean_colnames
-```
-
-The activation status and batch information for each individual cell of the 
-selected dataset can be seen in Figure \@ref(fig:visualisation-stimulus-batch).
-
-```{r visualisation-stimulus-batch, fig.cap="Principal component plots of the molecule count matrix. Colour indicates cell stimulus (left) and the batch information per cell (right)."}
 # Visualise the conditions and batch structure
 p_stimulus <- plotPCA(sce_naive_active, colour_by = "Stimulus") +
   theme(legend.position = "bottom")
@@ -596,17 +548,7 @@ p_batch <- plotPCA(sce_naive_active, colour_by = "Individuals") +
 multiplot(p_stimulus, p_batch, cols = 2)
 ```
 
-The cells split into two conditions: naive and activated CD4^+^ T cells.
-Furthermore, we detect neither obvious batch effects nor outlier cells.
-
-In the next step, we will visualise selected cell-specific quality metrics 
-overlayed on the principal components.
-Figure \@ref(fig:no-genes-total-counts) highlights the number of endogeneous 
-genes detected per cell and the total number of counts.
-Both of these metrics can be used to detect empty wells or broken cells 
-(low values) and possible doublets (high values).
-
-```{r no-genes-total-counts, fig.cap="Principal component plots of the molecule count matrix. Colour indicates the number of biological genes detected per cell (left) and the total number of reads per cell (right)."}
+```{r no-genes-total-counts, fig.cap="First two principal components of log-transformed expression counts after scran normalisation. Colour indicates the number of genes detected per cell (left) and the total number of endogenous reads per cell (right)."}
 # Visualise number of endogeneous genes detected
 p_total_features <- plotPCA(sce_naive_active, colour_by = "detected") +
   theme(
@@ -622,22 +564,12 @@ p_total_counts <- plotPCA(sce_naive_active, colour_by = "sum") +
 multiplot(p_total_features, p_total_counts, cols = 2)
 ```
 
-We detect a higher number of expressed genes and a higher total read count in
-activated cells. Furthermore, cells within each group show a wide distribution
-of these quality measures, without clear outlying cells.
-
-
-
-### Gene-level QC  
-
-Following cell-specific quality control, we will remove all genes that are not
-detected in at least 6 cells across both conditions.
-Furthermore, we remove genes that are not expressed with an average count of 1 
-across all cells.
+Following cell-specific QC, we will remove all genes that are not detected in at 
+least 5 cells across both conditions or for which their average read count 
+(across all cells) is below 1. 
 These thresholds need to be set specifically for each dataset, and careful
 gene-specific quality metrics need to be closely examined as suggested by the 
-`r Biocpkg("SimpleSingleCell")` and [*OSCA*](https://osca.bioconductor.org/) 
-Bioconductor workflows [@Lun2016,@Amezquita2019].
+[*OSCA*](https://osca.bioconductor.org/) Bioconductor workflow [@Amezquita2019].
 
 ```{r gene-selection}
 # Remove genes
@@ -645,6 +577,9 @@ ind_expressed <- rowSums(counts(sce_naive_active) > 0) >= 5 &
   rowMeans(counts(sce_naive_active)) >= 1
 sce_naive_active <- sce_naive_active[ind_expressed, ]
 ```
+
+The final dataset used in subsequent analyses contains `r ncol(sce_naive_active)`
+cells and `r nrow(sce_naive_active)` genes. 
 
 ## Calculating the molecule count for spike-in genes
 
